--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,10 +15,8 @@
 				children.each(function(i, img){
 					$(img).css("width", containerWidth / children.length - 20);
 				});
-				var arr = <%- JSON.stringify(puppies) %>
-				console.log(arr)
 
-				var obj = <%- JSON.stringify(stuff) %>
+				var obj = <%- JSON.stringify(result) %>
 				console.log(obj)
 			});
 		</script>
@@ -36,9 +34,7 @@
 		</div>
 
 		<div class="bio-container">
-			<p>
-				<img src="./img/pug.jpg" alt="luna alison alvarez" class="self">
-			</p>
+			<img src="./img/pug.jpg" alt="luna alison alvarez" class="self" style="vertical-align: left;">
 			<p class="bio">
 				Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.
 				<br>
@@ -50,7 +46,19 @@
 				Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
 			</p>
 		</div>
-
+	<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+			
 		<div class="slideshow">
 			<img src="http://placekitten.com/399/500" alt="" style="width: 0px;">
 			<img src="http://placekitten.com/401/500" alt="" style="width: 0px;">
