--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -91,6 +91,7 @@ h2, h3, p, div {
 }
 
 .slideshow {
+    padding: 70px 0 0 0;
     text-align: center;
 }
 
@@ -99,7 +100,7 @@ h2, h3, p, div {
     min-height: 100%;
     max-height: 100%;
     vertical-align: top;
-    box-shadow: 5px 2px 15px #001122;
+    box-shadow: 2px 7px 19px #001122;
 }
 
 .slideshow img:hover {
