--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,14 +10,13 @@
 		<script>
 			$(document).ready(function(){
 				var slideshow = $('.slideshow');
-				var children = slideshow.children();
+				var children = slideshow.children().children();
 				var containerWidth = slideshow.width();
 				children.each(function(i, img){
-					$(img).css("width", containerWidth / children.length - 20);
+					$(img).css("width", containerWidth / slideshow.children().length - 80);
 				});
 
 				var obj = <%- JSON.stringify(result) %>
-				console.log(obj)
 			});
 		</script>
 	</head>
@@ -46,29 +45,18 @@
 				Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
 			</p>
 		</div>
-	<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
 			
 		<div class="slideshow">
-			<img src="http://placekitten.com/399/500" alt="" style="width: 0px;">
-			<img src="http://placekitten.com/401/500" alt="" style="width: 0px;">
-			<img src="http://placekitten.com/400/501" alt="" style="width: 0px;">
-			<img src="http://placekitten.com/402/500" alt="" style="width: 0px;">
-			<img src="http://placekitten.com/400/501" alt="" style="width: 0px;">
-			<img src="http://placekitten.com/402/500" alt="" style="width: 0px;">
-			<img src="http://placekitten.com/402/500" alt="" style="width: 0px;">
-			<img src="http://placekitten.com/400/501" alt="" style="width: 0px;">
-			<img src="http://placekitten.com/402/500" alt="" style="width: 0px;">
+			<a href="/dogScore">
+				<img src="http://placekitten.com/399/500" alt="" >
+			</a>
+			<a href="/seattlemakers">
+				<img src="http://placekitten.com/399/500" alt="" >
+			</a>
+			<a href="/apptentive">
+				<img src="http://placekitten.com/399/500" alt="" >
+			</a>
+			
 		</div>
 	</body>
 </html>
