--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,9 @@
 				Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
 			</p>
 		</div>
-			
+		<h1 class="divider-headline">
+			p  r  o  j  e  c  t  s
+		</h1>
 		<div class="slideshow">
 			<a href="/dogScore">
 				<img src="http://placekitten.com/399/500" alt="" >
